[tool.poetry]
name = "tacticus-planner-inventory-companion"
version = "0.1.0"
description = "TacticusPlanner inventory companion: OCR your inventory screenshots and compare to TacticusPlanner"
authors = ["Dmitry Astapov <dastapov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
pytesseract = "^0.3.13"
opencv-python = "^4.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
